--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_spinkit: ^5.2.1
   intl: ^0.19.0
   flutter_dotenv: ^5.1.0
+  instagram_share: ^0.2.1
 
 dev_dependencies:
   flutter_test:
