--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   intl: ^0.19.0
   flutter_dotenv: ^5.1.0
   instagram_share: ^0.2.1
+  vibration: ^1.9.0
 
 dev_dependencies:
   flutter_test:
